# flatmap

./: Cargo.toml
src/: lib.rs  map.rs  set.rs
tests/: integration_tests.rs
