[package]
name = "flatmap"
version = "0.2.0"
edition = "2024"
description = "Fast and Efficient Linear Map and Set for small collections"
repository = "https://github.com/ash-hashtag/flatmap"
documentation = "https://docs.rs/flatmap"
readme = "README.md"
authors = ["ash-hashtag"]
license = "MIT"


[dependencies]
